tests/baselines/reference/extendAndImplementTheSameBaseType2.errors.txt
tests/cases/compiler/extendAndImplementTheSameBaseType2.ts(7,7): error TS2420: Class 'D' incorrectly implements interface 'C<数字>'.
  Types of property 'bar' are incompatible.
    Type '() => 文字' is not assignable to type '() => 数字'.
      Type '文字' is not assignable to type '数字'.
tests/cases/compiler/extendAndImplementTheSameBaseType2.ts(12,5): error TS2322: Type '数字' is not assignable to type '文字'.
tests/cases/compiler/extendAndImplementTheSameBaseType2.ts(16,5): error TS2322: Type '文字' is not assignable to type '数字'.


==== tests/cases/compiler/extendAndImplementTheSameBaseType2.ts (3 errors) ====
    class C<T> {
        foo: number
        bar(): T {
            return null;
        }
    }
    class D extends C<string> implements C<number> {
          ~
!!! error TS2420: Class 'D' incorrectly implements interface 'C<数字>'.
!!! error TS2420:   Types of property 'bar' are incompatible.
!!! error TS2420:     Type '() => 文字' is not assignable to type '() => 数字'.
!!! error TS2420:       Type '文字' is not assignable to type '数字'.
        baz() { }
    }
    
    var d: D = new D();
    var r: string = d.foo;
        ~
!!! error TS2322: Type '数字' is not assignable to type '文字'.
    var r2: number = d.foo;
    
    var r3: string = d.bar();
    var r4: number = d.bar();
        ~~
!!! error TS2322: Type '文字' is not assignable to type '数字'.